[gd_scene load_steps=4 format=3 uid="uid://yonjywoounif"]

[ext_resource type="Script" path="res://scenes/Menus/create_game.gd" id="1_qh41t"]
[ext_resource type="Theme" uid="uid://dqdpb1lan45tv" path="res://ui/ui.tres" id="1_xyf1o"]
[ext_resource type="Texture2D" uid="uid://d3p8ngmbp5prx" path="res://Assets/ALL OTHER ASSETS/menu.png" id="3_1rfv4"]

[node name="Create Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xyf1o")
script = ExtResource("1_qh41t")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1rfv4")

[node name="Custom Games" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
offset_left = -33.5
offset_top = -33.0
offset_right = 33.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Label" type="Label" parent="Custom Games"]
layout_mode = 2
text = "Select a game."
horizontal_alignment = 1

[node name="Game 1" type="Button" parent="Custom Games"]
layout_mode = 2
text = "Game 1"

[node name="Game 2" type="Button" parent="Custom Games"]
layout_mode = 2
text = "Game 2"

[node name="Back" type="Button" parent="Custom Games"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Custom Games/Game 1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="Custom Games/Game 2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="Custom Games/Back" to="." method="_on_button_pressed"]
